force-app/main/default/objects/RGC_Data_Assets__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE
(
IF( ISPICKVAL(Matrix_Priority__c,&quot;Low&quot;),
&quot;/img/samples/flag_green.gif&quot;,
IF( ISPICKVAL(Matrix_Priority__c,&quot;Medium&quot;),
&quot;/img/samples/flag_yellow.gif&quot;,
IF( ISPICKVAL(Matrix_Priority__c,&quot;High&quot;),
&quot;/img/samples/flag_red.gif&quot;,
&quot; &quot;


) )
),
&quot;&quot;, 15, 15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Flag</label>
    <type>Text</type>
</CustomField>