force-app/main/default/objects/RGC_Data_Assets__c/fields/Projected_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Registration_Date__c</fullName>
    <label>Projected Completion Date</label>
    <type>Date</type>
</CustomField>