force-app/main/default/objects/RGC_Data_Assets__c/listViews/Kanban_for_Matrix_Stage.listView-meta.xml
<ListView>
    <fullName>Kanban_for_Matrix_Stage</fullName>
    <columns>NAME</columns>
    <columns>Clinical_Informatics_Lead__c</columns>
    <columns>Collaborator_Phenotype_Data_Received__c</columns>
    <columns>Priority_Flag__c</columns>
    <columns>Matrix_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban for Matrix Stage</label>
</ListView>